<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TextView
        android:id="@+id/_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="100sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/loss"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/won"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginStart="20sp" />

    <TextView
        android:id="@+id/_triesLeftShown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_loss"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="30sp"
        android:text="Tries Left: xx"
        android:textSize="20sp"
        android:layout_marginStart="20sp" />

    <TextView
        android:id="@+id/_rightWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_triesLeftShown"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10dp"
        android:shadowColor="#FFFFFF"
        android:text="The word was: xxxxx"
        android:textSize="20sp"
        android:layout_marginStart="20sp" />

    <Button
        android:id="@+id/_btnReturn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20sp"
        android:text="@string/go_back_to_main_menu"/>

</RelativeLayout>